[package]
name = "aw_async_client"
version = "0.1.0"
authors = ["wieslawbaranowski <wieslaw.baranowski@intive.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
